# EWlattice3

./: .gitignore  CMakeLists.txt  EM_tests.txt  README.md  cmake_intel.sh  config.ini  config.ini.old  latfield2_fork.sln  main.cpp  makefile  overhaul.sln
EW_Model/: EW_Base.h  EW_BubbleNucl.h  EW_CSBubble.h  EW_Model.h  EW_Observation.h  EW_Transformation.cpp  EW_Transformation.h  EW_Winding.cpp  EW_Winding.h  EW_examples.cpp  EW_examples.h  EW_functions.h  EW_helper.cpp  EW_helper.h  EW_parameter.h
EWpy/: DTReader.ipynb  EWdata.py  FFTpy_local.ipynb  FFTpy_server.py  Fitting.py  H5Reader.ipynb  class_stat.py  class_thermaldata.py  compare_dx.ipynb  fft_test.ipynb  fourier.ipynb  graph_fft.ipynb  graphs1.ipynb  list_info.ipynb
MPIWrapper2D/: DTReader.ipynb  EW_Base.h  EW_BubbleNucl.h  EW_Model.h  EW_Observation.h  EW_examples.h  EW_functions.cpp  EW_functions.h  EW_helper.cpp  EW_parameter.h  H5Reader.ipynb  LATfield3_Field.h  LATfield3_Lattice.h  LATfield3_Site.cpp  LATfield3_Site.h  MPIWrapper2D.cpp  MPIWrapper2D.h  MPIWrapper2D.vcxproj  MPIWrapper2D.vcxproj.filters  ParaLattice.h  ParaLattice_Field.h  ParaLattice_Lattice.h  ParaLattice_Site.h  Test_MPIWrapper2D.cpp  Test_MPIWrapper2D.h  config.ini  main.cpp  makefile
MPIWrapper2D/.ipynb_checkpoints/: DTReader-checkpoint.ipynb  H5Reader-checkpoint.ipynb
MPIWrapper2D/ParaSite/: HDF5Wrapper.cpp  HDF5Wrapper.h  MPIWrapper2D.cpp  MPIWrapper2D.h  ParaSite.h  ParaSite_Field.h  ParaSite_Lattice.h  ParaSite_Site.h
MPIWrapper2D/tests/: Test_MPIWrapper2D.cpp  Test_MPIWrapper2D.h  tests.cpp  tests.h
ParaSite/: FFTWrapper.cpp  FFTWrapper.h  HDF5Wrapper.cpp  HDF5Wrapper.h  MPIWrapper2D.cpp  MPIWrapper2D.h  ParaSite.h  ParaSite_FFT.h  ParaSite_Field.h  ParaSite_Lattice.h  ParaSite_Site.h
docs/: #winding_class.lyx#  ElectroweakTheory.lyx  FieldsOnLattice.lyx  LATfield3.lyx  gauge_transform.nb  winding_class.lyx
examples/: csb_array_of_two_bubbles.cpp  csb_one_bubble.cpp  csb_two_bubbles.cpp  example_template.c  rand_nucl.cpp
modify/: LATfield2.h  LATfield2_Field.h  LATfield2_Lattice.cpp  LATfield2_Lattice.h  LATfield2_Site.cpp  LATfield2_Site.h  LATfield2_parallel2d.cpp  LATfield2_parallel2d.h
notes/: #LATfield3.lyx#  LATfield3.lyx
original/: ChangeLog.txt  Imag.hpp  LATfield2.cpp  LATfield2.hpp  LATfield2_FFT3D.cpp  LATfield2_Field.hpp  LATfield2_IO_Server.cpp  LATfield2_IO_server.hpp  LATfield2_Lattice.hpp  LATfield2_PlanFFT.hpp  LATfield2_SettingsFile.hpp  LATfield2_Site.hpp  LATfield2_parallel2d.hpp  int2string.hpp
overhaul/: main.cpp  overhaul.vcxproj
tests/: Test_main.cpp  test_fft.h  tests.h
